Bug 1312050 - Make loadAndRegisterSheet log a helpful error message if the URI contains a potentially-truncating unescaped #id. r=dholbert

MozReview-Commit-ID: 21WnD8nJRsp